# jogoteca

./: .replit  README.md  jogoteca  jogoteca.py  pyproject.toml
templates/: base.html  jogoteca  lista.html  novo.html
