[tool.poetry]
name = "repl_nix_jogoteca-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^0.29.30"
HTMLParser = "^0.0.2"
blinker = "^1.5"
keyring = "^23.7.0"
tornado = "^6.2"
attr = "^0.3.2"
lxml = "^4.9.1"
ipywidgets = "^7.7.1"
python-dotenv = "^0.20.0"
ipython = "^8.4.0"
railroad = "^0.5.0"
ordereddict = "^1.1"
toml = "^0.10.2"
docutils = "^0.19"
cryptography = "^37.0.4"
lockfile = "^0.12.2"
python-ntlm = "^1.1.0"
watchdog = "^2.1.9"
asgiref = "^3.5.2"
numpy = "^1.23.1"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
